# MOSAICX

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.slim  Makefile  README.md  docker-compose.yml  lessons learnt.md  mcp-config.example.json  pyproject.toml  pytest.ini  test.json
.github/workflows/: docker-publish.yml  pypi-publish.yml  quality-gates.yml
docker/: entrypoint.sh
docs/: README.md  architecture.md  cli-reference.md  configuration.md  developer-guide.md  extraction-branch-atlas.html  extraction-flow.html  getting-started.md  mcp-server.md  optimization.md  pipelines.md  query.md  quickstart.md  schemas-and-templates.md  sdk-reference.md  template-fields-example.csv  troubleshooting.md  zenta-source-mapping-guide.md
docs/bugs/: nested-object-fields-lost-in-template-generation.md
docs/internal/: signals.md
docs/plans/: 2026-02-15-extraction-redesign-plan.md  2026-02-15-extraction-redesign.md  2026-02-15-mosaicx-v2-implementation.md  2026-02-15-mosaicx-v2-rewrite-design.md  2026-02-15-robust-document-parser-design.md  2026-02-15-robust-document-parser-plan.md  2026-02-15-schema-management-design.md  2026-02-15-schema-management-plan.md  2026-02-17-unified-sdk-design.md  2026-02-17-webapp-integration-design.md  2026-02-17-webapp-integration-plan.md  2026-02-22-dspy-rlm-evolution-design.md  2026-02-22-dspy-rlm-evolution-plan.md  2026-02-23-dspy-full-capability-rollout.md  2026-02-23-production-rlm-roadmap.md  2026-02-23-query-verify-magic-progress.md  2026-02-23-sota-execution-memory.md  2026-02-24-roadmap-status-audit.md  2026-02-25-mosaicx-clear-roadmap.md  2026-02-27-smooth-install-design.md  2026-02-27-smooth-install-plan.md  2026-02-27-think-flag-design.md  2026-02-27-think-flag-plan.md
docs/runs/: 2026-02-23-template-bug-001-nested-object.md  2026-02-24-171602-hard-test-matrix.md  2026-02-24-eval-002-optimizer-sequence-report.md  2026-02-24-eval-002-verify-optimizer-sequence-report.md  2026-02-25-124924-hard-test-matrix.md  2026-02-25-extx-01-contract-propagation.md  2026-02-25-extx-02-react-routing.md  2026-02-25-extx-03-outlines-first-chain.md  2026-02-25-extx-04-selective-bestofn.md  2026-02-25-extx-05-adjudication-refine.md  2026-02-25-extx-06-deterministic-validators.md  2026-03-19-gepa-prompt-evolution.md
docs/tutorials/: 01-template-creation.md  02-extraction.md  (+1 more)
examples/: README.md  fastapi_integration.py
issues/: README_Update_Issue.md
mosaicx/: __init__.py  __main__.py  batch.py  cli.py  cli_display.py  cli_theme.py  config.py  constants.py  display.py  document_loader.py  envelope.py  extractor.py  mcp_server.py  metrics.py  mosaicx.py  nl_to_schema.py  redact.py  redact_pdf.py  report.py  runtime_env.py  sdk.py  setup.py  signals.py  source_mapping.py  standardizer.py  summarizer.py  text_extraction.py
schemas/: foo.py
scripts/: benchmark_backends.py  clear_dspy_cache.sh  ensure_vllm_mlx_server.sh  generate_hard_test_fixtures.py  pre-push-validation.sh  run_eval_optimizer_artifacts.sh  run_hard_test_matrix.sh  run_optimizer_sequence.py  run_schema_granularity_benchmark.py  setup.sh
tests/: test_batch.py  test_chandra_engine.py  test_cli.py  test_cli_display.py  test_cli_doctor.py  test_cli_dspy_config.py  test_cli_enhanced.py  test_cli_extract.py  test_cli_integration.py  test_cli_query.py  test_cli_setup.py  test_cli_theme.py  test_cli_verify.py  test_completeness.py  test_config.py  test_conformance.py  test_deidentifier_pipeline.py  test_document_models.py  test_documents.py  test_engine_base.py  test_envelope.py  test_evaluation_dataset.py  test_evaluation_grounding.py  test_evaluation_quality_gates.py  test_export_fhir.py  test_export_report.py  test_export_tabular.py  test_extract_contract.py  test_extraction_pipeline.py  test_extraction_schema_coercion.py  test_extractor.py  test_fhir.py  test_integration.py  test_loader_orchestrator.py  test_mcp_query.py  test_mcp_server_dspy_config.py  test_mcp_verify.py  test_metrics.py  test_modes.py  test_ocr_integration.py  (+46 more)
(+206 files in other folders)
